integración con Facebook

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </nav>
 
-    <!-- Contenid principal -->
+    <!-- Contenido principal -->
     <div class="container p-4">
         <div class="row">
             <div class="col-md-6 offset-md-3">
@@ -44,6 +44,35 @@
             </div>
         </div>
     </div>
+
+    <!-- Facebook  -->
+
+    <div class="container login" style="display: none;">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <div class="fb-group mt-4" data-href="https://www.facebook.com/groups/2894685094183793" data-width="480" data-show-social-context="true" data-show-metadata="false">
+                    <blockquote cite="https://www.facebook.com/groups/2894685094183793" class="fb-xfbml-parse-ignore">pruebas-ps</blockquote>
+                </div>
+
+                <div class="fb-page mt-4" data-href="https://www.facebook.com/Pruebas-ps-105757578266195" data-tabs="timeline" data-width="480" data-height="70" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                    <blockquote cite="https://www.facebook.com/Pruebas-ps-105757578266195" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Pruebas-ps-105757578266195">Pruebas-ps</a></blockquote>
+                </div>
+
+                <div class="fb-like mt-4" data-href="https://www.facebook.com/Pruebas-ps-105757578266195" data-width="" data-layout="button_count" data-action="like" data-size="large" data-share="true"></div>
+
+                <div class="fb-post mt-4" data-href="https://www.facebook.com/permalink.php?story_fbid=105922828249670&amp;id=105757578266195" data-width="500" data-show-text="true">
+                    <blockquote cite="https://www.facebook.com/permalink.php?story_fbid=105922828249670&amp;id=105757578266195" class="fb-xfbml-parse-ignore">
+                        <p>Esto es una publicación de prueba</p>Publicado por <a href="https://www.facebook.com/Pruebas-ps-105757578266195/">Pruebas-ps</a> en&nbsp;<a href="https://www.facebook.com/permalink.php?story_fbid=105922828249670&amp;id=105757578266195">Miércoles, 17 de marzo de 2021</a></blockquote>
+                </div>
+
+                <div class="fb-comments mt-4 mb-4" data-href="https://www.facebook.com/Pruebas-ps-105757578266195" data-width="" data-numposts="5"></div>
+            </div>
+        </div>
+    </div>
+
+
+
+
 
 
     <!-- modal sign up -->
@@ -97,6 +126,11 @@
             </div>
         </div>
     </div>
+
+    <!-- Facebook -->
+
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v10.0&appId=766631244287063&autoLogAppEvents=1" nonce="Fy4TNkp6"></script>
 
     <!-- scripts bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
